objects/Account__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Account Custom Tab Settings for the Account Hierarchy VF page</description>
    <label>Account Custom Tab Settings</label>
    <fields>
        <fullName>Tab_Name__c</fullName>
        <description>The Object name that will appear on the VF page as a Tab</description>
        <label>Tab Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_List__c</fullName>
        <description>The List of Fields that are to be displayed on the VF page Columns</description>
        <inlineHelpText>The List of Fields that are to be displayed on the VF page Columns</inlineHelpText>
        <label>Field List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <description>The Order in which the Object tab has to be displayed</description>
        <inlineHelpText>The Order in which the tab has to be displayed</inlineHelpText>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <description>The object API Name</description>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>